fix uninitialized variable warning, bug 204503, patch by alfredkayser@nl.ibm.com, r+sr=darin